RightPanel: {position: fixed; overflow-y: auto;} => follows user down page!
Fixes #150
Fixes #151

--- a/src/components/Content/Pursuance/views/DiscussView.css
+++ b/src/components/Content/Pursuance/views/DiscussView.css
@@ -14,6 +14,7 @@
   border: 1px solid #6d6d6d;
   border-right: none;
   border-bottom-left-radius: 4px;
+  margin-right: 50px;
 }
 
 .leapchat-frame-narrow {
