--- a/src/components/Content/TaskHierarchy/TaskHierarchy.css
+++ b/src/components/Content/TaskHierarchy/TaskHierarchy.css
@@ -1,5 +1,6 @@
 #task-hierarchy {
   height: 100%;
+  margin-right: 50px;
 }
 
 #task-hierarchy-title {
